--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div class="container">
         <main class="main">
-            <h1 class="main__title">Добро пожаловать на&nbsp;мой сайт !</h1>
-            <p class="main__description">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></p>
-            <button class="main__button">Поехали!</button>
+            <div class="main-box">
+                <h1 class="main__title">Добро пожаловать на&nbsp;мой сайт !</h1>
+                <p class="main__description">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></p>
+                <button class="main__button">Поехали!</button>
+            </div>
         </main>
 
         <section class="games">
