--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
             </div>
         </section>
     </div>
+
+    <script src="./script/homework/hw 2.js" defer></script>
 </body>
 </html>
