--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         </section>
     </div>
 
-    <script src="./script/homework/hw 2.js" defer></script>
+    <!-- <script src="./script/homework/hw 2.js" defer></script> -->
 </body>
 </html>
