--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <main class="main">
             <div class="main-box">
-                <h1 class="main__title">Добро пожаловать на&nbsp;мой сайт !</h1>
-                <p class="main__description">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></p>
+                <h1 class="main__title">Добро пожаловать <br> на мой сайт !</h1>
+                <p class="main__description">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b>&nbsp;и&nbsp;<b>приступай</b></p>
                 <button class="main__button">Поехали!</button>
             </div>
         </main>
@@ -33,5 +33,6 @@
     </div>
 
     <!-- <script src="./script/homework/hw 2.js" defer></script> -->
+    <script src="./script/homework/hw 3.js"></script>
 </body>
 </html>
