--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </div>
 
-    <!-- <script src="./script/homework/hw 2.js" defer></script> -->
-    <script src="./script/homework/hw 3.js"></script>
+    <!-- <script src="./script/homework/hw 2.js"></script> -->
+    <!-- <script src="./script/homework/hw 3.js"></script> -->
 </body>
 </html>
