--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <!-- <script src="./script/homework/hw 2.js"></script> -->
     <!-- <script src="./script/homework/hw 3.js"></script> -->
     <!-- <script src="./script/homework/hw 4.js"></script> -->
-    <script src="./script/homework/hw 5.js"></script>
+    <!-- <script src="./script/homework/hw 5.js"></script> -->
 </body>
 </html>
