--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     <!-- <script src="./script/homework/hw 3.js"></script> -->
     <!-- <script src="./script/homework/hw 4.js"></script> -->
     <!-- <script src="./script/homework/hw 5.js"></script> -->
-    <script src="./script/homework/hw 6.js"></script>
+    <!-- <script src="./script/homework/hw 6.js"></script> -->
 </body>
 </html>
