--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
     <!-- <script src="./script/homework/hw 4.js"></script> -->
     <!-- <script src="./script/homework/hw 5.js"></script> -->
     <!-- <script src="./script/homework/hw 6.js"></script> -->
-    <script src="./script/homework/hw 7.js"></script>
+    <!-- <script src="./script/homework/hw 7.js"></script> -->
 </body>
 </html>
