--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     <!-- <script src="./script/homework/hw 5.js"></script> -->
     <!-- <script src="./script/homework/hw 6.js"></script> -->
     <!-- <script src="./script/homework/hw 7.js"></script> -->
-    <script src="./script/homework/hw-8.js"></script>
+    <!-- <script src="./script/homework/hw-8.js"></script> -->
 </body>
 </html>
